# SSCex04

./: CMakeLists.txt  Heat.h  Vector.h  heat.cpp  myjob.pbs  wCMakeLists.txt
solution/: solution.pvd  time_step_0.pvtu  time_step_0_0.vtu  time_step_0_1.vtu  time_step_0_2.vtu  time_step_0_3.vtu  time_step_8.pvtu  time_step_8_0.vtu  time_step_8_1.vtu  time_step_8_2.vtu  time_step_8_3.vtu
